support deleting exception
