# api/dist/api.yml
@@ -38,6 +38,16 @@ paths:
           description: Success
           schema:
             $ref: '#/definitions/Policy'
+    delete:
+      summary: Delete a policy by given id
+      tags:
+        - Policy
+      parameters:
+        - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: Success
+
   /policy/create:
     post:
       summary: Create a new policy with json content
@@ -64,17 +74,51 @@ paths:
         200:
           description: Success
         400:
-          $ref: '#/responses/400BadRequest'          
-  /policy/delete:
+          $ref: '#/responses/400BadRequest'
+  /exception/create:
     post:
-      summary: Delete a policy by given id
+      summary: Create a new exception with json content
       tags:
-        - Policy
+        - Exception
       parameters:
-        - $ref: '#/parameters/idInQuery'
+        - $ref: '#/parameters/json'        
       responses:
         200:
           description: Success
+        400:
+          $ref: '#/responses/400BadRequest'
+  /exception/list:
+    get:
+      summary: Returns the list of all policy rules
+      tags:
+        - Exception
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: '#/definitions/Exceptions'
+  /exception/{id}:
+    get:
+      summary: Query info on a specific exception rule
+      tags:
+        - Exception
+      parameters:
+       - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: '#/definitions/Exception'
+    delete:
+      summary: Delete an exception by given id
+      tags:
+        - Exception
+      parameters:
+        - $ref: '#/parameters/id'
+      responses:
+        200:
+          description: Success
+      
   /items:
     x-swagger-router-controller: ItemController
     get:
@@ -362,6 +406,21 @@ definitions:
     type: array
     items:
       $ref: '#/definitions/Policy'
+  Exception:
+    type: object
+    properties:
+      eid:
+        type: string
+      timestamp:
+        type: string
+      aid:
+        type: string
+      type:
+        type: string
+  Exceptions:
+    type: array
+    items:
+      $ref: '#/definitions/Exception'
   Item:
     type: object
     properties:
